2000-06-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-calendar.el (mhc-calendar): Added autoload magic.

	* emacs/MHC-MK (make-mhc/configure): Don't set make-mhc/lisp-directory.
	(make-mhc/compile-package): Set make-mhc/lisp-directory.
	(make-mhc/install-file): Print install paths when not debugged.

2000-06-14  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl-setup): Added autoload magic.

	* emacs/mhc-gnus.el (mhc-gnus-setup): Ditto.

	* emacs/mhc-mew.el (mhc-mew-setup): Ditto.

	* emacs/mhc-summary.el (mhc-icon-path): Changed default
	for XEmacs package.

	* emacs/Makefile (clean): Delete "auto-autolads.el"
	and "custom-load.el" too.

	* emacs/MHC-MK (make-mhc/icon-source-directory): New variable.
	(make-mhc-install-package): Install "auto-autoloads" and "custom-load".
	Install icons.

2000-06-13  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/Makefile: Make a change in using MHC-MK.

	* emacs/MHC-MK: New file.

2000-06-13  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* emacs/mhc-gnus.el (mhc-gnus-generate-summary-buffer): Set
	QUIT-CONFIG to ensure MHC to be called from a group buffer even if
	there's no schedule.

2000-06-12  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc.el (toplevel): Require mhc-calendar, mhc-sync.
	(mhc-delete-file, mhc-modify-file): New functions to call from mhc and mhc-calendar.
	(mhc-edit): Support mhc-calendar-mode.
	(mhc-setup-p): New variable.
	(mhc-setup): Add in mhc-calendar's setup funciton.

	* emacs/mhc-vars.el (mhc-sync-*, mhc-calendar-*): New variables.

	* emacs/mhc-parse.el (mhc-parse-file): mhc-default-coding-system use.

	* emacs/mhc-misc.el (mhc-misc-read-passwd): New function.

	* emacs/mhc-mew.el: (require 'mew) instead of mew-vars.

	* emacs/mhc-logic.el: (require 'bytecomp) in top level, for byte-compile-wanings.
	
	* emacs/mhc-face.el (mhc-calendar-hnf-face-*): New variable form mhc-calendar.

	* emacs/mhc-calendar.el: Sync up to main trunk.